--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/http-server/bin/http-server -p 9000 && open http://localhost:9000"
+    "start": "node node_modules/http-server/bin/http-server -p 9000"
   },
   "author": "",
   "license": "ISC"
